Header horizontal scrollbar fix

--- a/app/assets/stylesheets/spree/scss/_header.scss
+++ b/app/assets/stylesheets/spree/scss/_header.scss
@@ -173,6 +173,9 @@ header#header {
             font-size: 14px;
             font-weight: 700;
             text-transform: uppercase;
+            @media (max-width: 1400px) {
+              padding: 8px 12px;
+            }
             @media (max-width: 1300px) {
               padding: 8px 20px 0 20px;
               line-height: 0.8;
